# workflow-builder

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: database.py
backend/app/executions/: dependencies.py  executor.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/integrations/openai/: client.py
backend/app/nodes/: base.py  input_handler.py  prompt_handler.py  registry.py  tool_handler.py
backend/app/shared/: variable_resolver.py
backend/app/tools/: base.py  registry.py
backend/app/tools/subway_db_query/: average_delay.py  models.py  queries.py  tool.py
backend/app/workflows/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  validator.py
backend/data/: toronto.csv
backend/tests/tools/subway_db_query/: test_db_query.py
backend/tests/workflows/: test_validator.py
docs/: development.md  schema.md
web/: Dockerfile  package-lock.json  package.json
web/src/app/: AppProvider.tsx  AppRouter.tsx
web/src/config/: tools.ts
web/src/features/builder/: api.ts  index.ts  schema.tsx  variables.ts
web/src/features/builder/components/: BuilderCanvas.tsx  NodeConfigView.tsx  NodePalette.tsx  SaveButton.tsx  builder-canvas.css  nodes.tsx
web/src/features/executor/: api.ts  index.ts  schema.ts
web/src/features/workflows/: api.ts  index.ts  schema.ts
web/src/pages/builder/: BuilderPage.tsx  index.tsx
web/src/pages/workflows/: WorkflowDetailPage.tsx  WorkflowListPage.tsx  index.tsx
(+11 files in other folders)
